--- a/index.html
+++ b/index.html
@@ -8,23 +8,75 @@
  	#chat{
  		height:500px;
  	}
+    #contentWrap{
+        display: none;
+    }
+    #chatWrap{
+        float:left;
+        border:1px #000 solid;
+    }
 	</style>
 </head>
 <body>
+
+    <div id = "nickWrap">
+        <p>Enter a username</p>
+        <p id="nickError"></p>
+        <form id="setNick">
+            <input size="35" id="nickname">
+            <input type="submit">
+        </form>
+    </div>
+    <div id= "contentWrap">
+        <div id="chatWrap">
 	<div id ="chat"></div>
 	<form id="send-message">
 		<input size = "35" id="message"></input>
 		<input type="submit">
 
 	</form>
+</div>
+        <div id="users"></div>
+</div>
 	<script src ="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src ="/socket.io/socket.io.js"></script>
     <script>
     jQuery(function($){
      var socket = io.connect(); 
      var $messageForm = $('#send-message');
+     var $nickForm = $('#setNick');
+     var $users =$('#users');
+     var $nickError = $('#nickError');
+     var $nickBox = $('#nickname');
      var $messageBox =$('#message');
      var $chat =$('#chat');
+
+     $nickForm.submit(function(e){
+            
+            e.preventDefault();
+            socket.emit("new-user",$nickBox.val(),function(data){
+                if(data){
+                    $('#nickWrap').hide();
+                    $('#contentWrap').show();
+
+                }else{
+                    $nickError.html("that username is already taken! .... try again !");
+                }
+
+
+
+            });
+            $nickBox.val('');
+
+
+     });
+     socket.on("usernames", function(data){
+            var html ="";
+            for(i=0; i<data.length;i++){
+                html += data[i] + '</br>';
+            }
+            $users.html(html);
+     });
 
      $messageForm.submit(function(e){
 
@@ -34,7 +86,7 @@
      	     });
 
      	socket.on('new-message',function(data){
-     		$chat.append(data +"<br>");
+     		$chat.append('</br>'+data.nick + ":" +data.msg +"<br>");
      	})
 
 
