--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         float:left;
         border:1px #000 solid;
     }
+    .error{
+        color: red;
+    }
+    .whisper{
+        color:blue;
+        font-style: italic;
+    }
 	</style>
 </head>
 <body>
@@ -81,13 +88,29 @@
      $messageForm.submit(function(e){
 
      	e.preventDefault();
-     	socket.emit('send-message',$messageBox.val());
+     	socket.emit('send-message',$messageBox.val(),function(data){
+                   
+        $chat.append('<span class ="error">'+data+"</span></br>");
+
+
+
+        });
  		$messageBox.val('');
      	     });
 
      	socket.on('new-message',function(data){
-     		$chat.append('</br>'+data.nick + ":" +data.msg +"<br>");
+     		$chat.append('<span class ="msg"><b>'+data.nick + ":</b>" +data.msg +"</span></br>");
      	})
+
+
+        socket.on("whisper",function(data){
+                         
+                    $chat.append("<span class='whisper'><b>"+data.nick +'</b>:'+ data.msg + '</span></br>');
+
+
+
+
+        });
 
 
     });
